/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.ProcessManager.Orchestrations.Contracts";

message StartOrchestrationDto {
  string orchestration_name = 1; // The name of the orchestration to start.
  int32 orchestration_version = 2; // The version of the orchestration to start.
  string json_input = 3; // The input to the orchestration serialized as a JSON
}
